--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -9,5 +9,5 @@ jobs:
     - uses: actions/first-interaction@v1
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        issue-message: 'YAY!, This is your first issue. Can you solve it? Go for it and make your first PR.'' first issue'
-        pr-message: 'Hurray Your first PR is submitted, Love from : Vidit :'' first pr'
+        issue-message: 'YAY!, This is your first issue. Can you solve it? Go for it and make your first PR.'
+        pr-message: 'Hurray Your first PR is submitted, Love from : Vidit :'
